--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>bg_etem__sicher_investieren</title>
+      <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+      <link href="<%= BASE_URL %>icons/bg_logo.png" rel="icon">
+      <title>Sicher Investieren</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but bg_etem__sicher_investieren doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>Sicher Investieren</strong> funktioniert leider nicht ohne JavaScript. Bitte schalten Sie JavaScript
+        ein, um fortzufahren.
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+    body {
+        background: #014B94;
+    }
+</style>
