--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
       <link href="<%= BASE_URL %>icons/bg_logo.png" rel="icon">
+    <link href="Manifest.json" rel="manifest"/>
       <title>Sicher Investieren</title>
   </head>
   <body>
