App Icon geändert Manifest bearbeitet

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <title>Sicher Investieren</title>
 
 
-  <link href="<%= BASE_URL %>icons/bg_logo_back_white.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="<%= BASE_URL %>icons/app_icon.jpg" rel="apple-touch-icon" sizes="190x190">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="yes" name="mobile-web-app-capable">
   <link href="splashscreens/iphone5_splash.png"
