--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <link href="<%= BASE_URL %>images/favicon.png" rel="icon">
+    <link href="<%= BASE_URL %>icons/app_icon.jpg" rel="icon">
 
 
   <link href="Manifest.json" rel="manifest"/>
