--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://couch.jp-studios.de https://couch.kraeks.de https://new-etem-praev.bg-kooperation.de 'unsafe-inline'">
+<!--  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://couch.jp-studios.de https://couch.kraeks.de https://new-etem-praev.bg-kooperation.de 'unsafe-inline'">-->
   <link href="<%= BASE_URL %>icons/bg_logo.png" rel="icon">
   <title>Sicher Investieren</title>
 </head>
